refactor: actualizar título y subtítulo en index.html para alinearse con la temática de Huaso Dorking

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operadores de Búsqueda Avanzada de Google - Edición Chilena</title>
+    <title>Huaso Dorking - Advanced search</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -16,9 +16,8 @@
             <div class="chile-flag-white"></div>
             <div class="chile-flag-red"></div>
         </div>
-        <h1>Operadores de Búsqueda Avanzada de Google</h1>
-        <p class="subtitle">¡Güena, cabros! Aquí les traigo los mejores trucos pa' buscar en Google como todo un
-            baqueano digital</p>
+        <h1>Huaso Dorking - Advanced search</h1>
+        <p class="subtitle">Wena, cabros! Aquí les traigo los mejores trucos pa' buscar en Google</p>
         <p class="date">Actualizado: Abril 2025</p>
     </header>
 
@@ -41,7 +40,7 @@
     <main class="container">
         <section id="introduccion" class="fade-in">
             <h2>Introducción</h2>
-            <p>Póngale atención, mi'jito, que estos operadores le van a servir más que un buen lazo en el campo. Aquí
+            <p>Póngale atención, mijo, que estos operadores le van a servir más que un buen lazo en el campo. Aquí
                 encontrará todos los operadores de búsqueda avanzada de Google documentados actualmente. Algunos
                 operadores tienen dos versiones con la misma función (por ejemplo, <strong>allinanchor</strong> y
                 <strong>inanchor</strong>).
